--- a/app/views/shared/_breadcrumbs.html.erb
+++ b/app/views/shared/_breadcrumbs.html.erb
@@ -4,13 +4,13 @@
       <li>
         <div class="flex items-center">
           <% if crumb.name == 'Home' %>
-            <%= link_to crumb.path, class: 'text-gray-400 hover:text-gray-500' do %>
-              <%= heroicon('home', class_name: "flex-shrink-0 h-5 w-5 text-gray-400") %>
+            <%= link_to crumb.path, class: 'text-gray-400 hover:text-gray-500 dark:hover:text-gray-200' do %>
+              <%= heroicon('home', class_name: "flex-shrink-0 h-5 w-5 text-gray-400 hover:text-gray-500 dark:hover:text-gray-200") %>
               <span class="sr-only">Home</span>
             <% end %>
           <% else %>
             <%= heroicon('chevron-right', class_name: "flex-shrink-0 h-5 w-5 text-gray-400") %>
-            <%= link_to crumb.name, crumb.path, class: 'ml-4 text-sm font-medium text-gray-400 hover:text-gray-500' %>
+            <%= link_to crumb.name, crumb.path, class: 'ml-4 text-sm font-medium text-gray-400 hover:text-gray-500 dark:hover:text-gray-200' %>
           <% end %>
         </div>
       </li>
