--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -5,8 +5,8 @@
 <% content_for :options do %>
   <%= link_to 'Nieuw bier', new_beer_path, class: button_classes %>
   <%= search_form_for @search, class: "inline-flex rounded-md" do |f| %>
-    <%= f.search_field :name_or_kind_or_brewer_or_country_cont, placeholder: 'Vind hier, je bier.', class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full text-sm border-gray-300 rounded-l-md' %>
-    <%= submit_tag "Zoek", class: "-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:z-10 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500" %>
+    <%= f.search_field :name_or_kind_or_brewer_or_country_cont, placeholder: 'Vind hier, je bier.', class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 block w-full text-sm dark:text-gray-200 dark:bg-gray-800 border-gray-300 dark:border-gray-700 rounded-l-md' %>
+    <%= submit_tag "Zoek", class: "-ml-px relative inline-flex items-center px-4 py-2 rounded-r-md border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800 text-sm font-medium text-gray-700 dark:text-gray-200 hover:bg-gray-50 dark:hover:bg-gray-700 focus:z-10 focus:outline-none focus:ring-1 focus:ring-hamers-red-500 focus:border-hamers-red-500" %>
   <% end %>
 <% end %>
 
