--- a/app/views/beers/table.html.erb
+++ b/app/views/beers/table.html.erb
@@ -1,9 +1,9 @@
 <turbo-frame id="beer_table">
   <% if @beers.any? %>
     <div class="flex flex-col -m-6">
-      <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-        <table class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-100">
+      <div class="shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
+        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+          <thead class="bg-gray-100 dark:bg-gray-900">
           <tr>
             <% columns = [
               ["Naam", :name],
@@ -14,7 +14,7 @@
               ["Reviews", :reviews]
             ] %>
             <% columns.each do |title, sym| %>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
                 <%= sort_link(@search, sym, title) %>
               </th>
             <% end %>
@@ -24,15 +24,15 @@
           </tr>
           </thead>
 
-          <tbody class="bg-white divide-y divide-gray-200">
+          <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
           <% @beers.each do |beer| %>
-            <tr class="hover:bg-gray-100 cursor-pointer" onclick="Turbo.visit('<%= beer_path(beer) %>')">
+            <tr class="hover:bg-gray-100 dark:hover:bg-gray-800 cursor-pointer" onclick="Turbo.visit('<%= beer_path(beer) %>')">
               <td class="px-6 py-4 whitespace-nowrap">
                 <div class="flex items-center">
                   <% if beer.image.attached? %>
                     <%= image_tag beer.image, class: 'w-6 -ml-4 mr-2' %>
                   <% end %>
-                  <div class="text-sm font-medium text-gray-900 popover"
+                  <div class="text-sm font-medium text-gray-900 dark:text-gray-200 popover"
                       data-controller="popover"
                       data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut"
                       data-popover-translate-x="0"
@@ -42,26 +42,26 @@
                           <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium <%= rating_color(current_user&.reviews&.find_by(beer: beer)&.rating) %>">
                             <%= current_user&.reviews&.find_by(beer: beer)&.rating %>
                           </span>
-                      <div class="content hidden absolute bg-gray-100 border border-gray-200 text-gray-700 rounded p-3" data-popover-target="content">
-                        Het cijfer dat jij dit biertje gegeven hebt.
+                      <div class="content hidden absolute bg-gray-100 dark:bg-gray-800 border border-gray-200 dark:border-gray-700 text-gray-700 dark:text-gray-300 rounded p-3" data-popover-target="content">
+                        Het cijfer dat jij dit biertje hebt gegeven.
                       </div>
                     <% end %>
                   </div>
                 </div>
               </td>
-              <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+              <td class="px-6 py-4 whitespace-normal text-sm text-gray-500 dark:text-gray-400">
                 <%= beer.kind %>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                 <%= beer.cijfer %>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                 <%= beer.brewer %>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                 <%= beer.country %>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 overflow-hidden -space-x-3">
+              <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400 overflow-hidden -space-x-3">
                 <% if current_user&.active? %>
                   <% beer.reviews.each.each do |review| %>
                     <%= link_to review.user, class: "inline-block" do %>
