--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -23,10 +23,10 @@
   <% end %>
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <div class="-mx-5 sm:-mx-6 md:col-span-9 md:pr-6">
-    <div class="overflow-hidden border-b sm:rounded-t-md">
-      <ul role="list" class="divide-y divide-gray-200">
+    <div class="overflow-hidden border-b dark:border-gray-700 sm:rounded-t-md">
+      <ul role="list" class="divide-y divide-gray-200 dark:divide-gray-700 dark:text-gray-200">
         <%= render @reviews %>
       </ul>
     </div>
@@ -43,8 +43,8 @@
         <img src="https://placehold.co/500x500?text=Geen foto" class="w-full">
       <% end %>
 
-      <div class="mt-5 -mx-6 border-t border-gray-200">
-        <dl class="sm:divide-y sm:divide-gray-200">
+      <div class="mt-5 -mx-6 border-t border-gray-200 dark:border-gray-700">
+        <dl class="sm:divide-y sm:divide-gray-200 sm:dark:divide-gray-700">
 
           <% specs = {
             Naam: @beer.name,
@@ -56,10 +56,10 @@
 
           <% specs.each do |name, value| %>
             <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
-              <dt class="mx-6 text-sm font-medium text-gray-500">
+              <dt class="mx-6 text-sm font-medium text-gray-500 dark:text-gray-400">
                 <%= name %>
               </dt>
-              <dd class="mx-6 mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+              <dd class="mx-6 mt-1 text-sm text-gray-900 dark:text-gray-200 sm:mt-0 sm:col-span-2">
                 <%= value %>
               </dd>
             </div>
@@ -67,10 +67,10 @@
 
           <% if @beer.URL %>
             <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
-              <dt class="mx-6 text-sm font-medium text-gray-500">
+              <dt class="mx-6 text-sm font-medium text-gray-500 dark:text-gray-400">
                 Meer informatie
               </dt>
-              <dd class="mx-6 mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+              <dd class="mx-6 mt-1 text-sm text-gray-900 dark:text-gray-200 sm:mt-0 sm:col-span-2">
                 <%= link_to "Link", @beer.URL %>
               </dd>
             </div>
