--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -11,21 +11,21 @@
         </div>
         <div class="min-w-0 flex-1 px-4 md:gap-4">
           <div>
-            <p class="text-sm font-medium text-gray-900">
+            <p class="text-sm font-medium text-gray-900 dark:text-gray-200">
               <%= review.description %>
             </p>
-            <p class="mt-2 flex items-center text-sm text-gray-500">
+            <p class="mt-2 flex items-center text-sm text-gray-500 dark:text-gray-400">
               <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
               <span class="truncate"><%= review.created_at.strftime("%d-%m-%Y") %></span>
 
               <% if current_user&.active? %>
-                <%= link_to "Wijzig", edit_review_path(review), class: 'ml-2 px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
-                <%= link_to "Verwijder", review, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: 'ml-1 px-2.5 py-1.5 border border-gray-300 shadow-sm text-xs font-medium rounded text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
+                <%= link_to "Wijzig", edit_review_path(review), class: 'ml-2 px-2.5 py-1.5 border border-gray-300 dark:border-gray-700 shadow-sm text-xs font-medium rounded text-gray-700 dark:text-gray-200 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
+                <%= link_to "Verwijder", review, method: :delete, data: { confirm: 'Weet je het zeker?' }, class: 'ml-1 px-2.5 py-1.5 border border-gray-300 dark:border-gray-700 shadow-sm text-xs font-medium rounded text-gray-700 dark:text-gray-200 bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
               <% end %>
             </p>
           </div>
         </div>
-        <div class="flex-shrink-0 font-semibold text-lg">
+        <div class="flex-shrink-0 font-semibold text-lg dark:text-gray-200">
           <%= review.rating %>
         </div>
       </div>
