Updated file input text colour for dark mode

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -18,7 +18,7 @@
     <%= image_tag @beer.image.representation(resize_to_limit: [128, 128]) %>
   <% end %>
   <%= f.label :image, class: label_classes %>
-  <%= f.file_field :image %>
+  <%= f.file_field :image, class: 'dark:text-gray-200 cursor-pointer w-full' %>
 
   <%= f.label :kind, class: label_classes %>
   <%= f.text_field :kind, class: input_classes %>
