--- a/app/views/users/_table.html.erb
+++ b/app/views/users/_table.html.erb
@@ -2,12 +2,12 @@
   <div class="flex flex-col mt-6 -mx-6 -mb-6">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-          <table class="min-w-full divide-y divide-gray-200">
-            <thead class="bg-gray-100">
+        <div class="shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
+          <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+            <thead class="bg-gray-100 dark:bg-black">
             <tr>
               <% %w[Naam Groepen Lichting Citaten Reviews 2FA Inschrijfpercentage].each do |x| %>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-400 uppercase tracking-wider">
                   <%= x %>
                 </th>
               <% end %>
@@ -16,18 +16,18 @@
               </th>
             </tr>
             </thead>
-            <tbody class="bg-white divide-y divide-gray-200">
+            <tbody class="bg-white dark:bg-gray-900 divide-y divide-gray-200 dark:divide-gray-700">
 
             <% users.each do |user| %>
-              <tr onclick='Turbo.visit("<%= user_path(user) %>")' class="hover:bg-gray-50 cursor-pointer">
+              <tr onclick='Turbo.visit("<%= user_path(user) %>")' class="hover:bg-gray-50 dark:hover:bg-gray-700 cursor-pointer">
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="flex items-center">
                     <div class="flex-shrink-0 h-10 w-10">
                       <%= gravatar_for user, class: "h-10 w-10 rounded-full", alt: user.name %>
                     </div>
                     <div class="ml-4">
-                      <div class="text-sm font-medium text-gray-900"><%= user.name %></div>
-                      <div class="text-sm text-gray-500"><%= user.email %></div>
+                      <div class="text-sm font-medium text-gray-900 dark:text-gray-200"><%= user.name %></div>
+                      <div class="text-sm text-gray-500 dark:text-gray-400"><%= user.email %></div>
                     </div>
                   </div>
                 </td>
@@ -36,19 +36,19 @@
                    <%= render 'usergroups/group_icon_list', user: user %>
                   </div>
                 </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                   <%= user.batch %>
                 </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                   <%= user.quotes.count %>
                 </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                   <%= user.reviews.count %>
                 </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                   <%= user.otp_required_for_login? ? "✅" : "🤡" %>
                 </td>
-                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 dark:text-gray-400">
                   <%= user.drink_ratio.round(0) %> %
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
