--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,14 +3,19 @@
 <% end %>
 
 <% content_for :options do %>
+  <% if current_user&.admin? %>
+    <%= link_to new_user_invitation_path, class: button_classes do %>
+      <%= heroicon('user-add', style: :outline, class_name: "h-3 w-3 mr-1") %> Aspirant uitnodigen
+    <% end %>
+  <% end %>
   <%= link_to 'Publieke ledenpagina', public_leden_path, class: button_classes %>
 <% end %>
 
-<div data-controller="tabs select-tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
+<div data-controller="tabs select-tabs" data-tabs-active-tab="border-hamers-red-500 font-bold text-hamers-red-500 dark:text-hamers-red-500 hover:border-hamers-red-600 hover:text-hamers-red-600 dark:hover:border-hamers-red-600 dark:hover:text-hamers-red-600">
   <div>
     <div class="sm:hidden">
       <label for="tabs" class="sr-only">Select a tab</label>
-      <select id="tabs" data-action="change->select-tabs#change" data-select-tabs-target="tab" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
+      <select id="tabs" data-action="change->select-tabs#change" data-select-tabs-target="tab" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 dark:bg-gray-800 dark:text-gray-200 dark:border-gray-700 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
         <option value="0">Leden</option>
         <option value="1">Aspirant-leden</option>
         <option value="2">Oud-leden</option>
@@ -19,18 +24,18 @@
     </div>
 
     <div class="hidden sm:block -mt-4">
-      <div class="border-b border-gray-200">
+      <div class="border-b border-gray-200 dark:border-gray-700">
         <nav class="-mb-px flex space-x-8">
-          <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+          <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 hover:border-gray-300 dark:hover:border-gray-200 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
             Leden
           </button>
-          <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+          <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 hover:border-gray-300 dark:hover:border-gray-200 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
             Aspirant-leden
           </button>
-          <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+          <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 hover:border-gray-300 dark:hover:border-gray-200 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
             Oud-leden
           </button>
-          <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+          <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 hover:border-gray-300 dark:hover:border-gray-200 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
             Externe accounts
           </button>
         </nav>
@@ -43,12 +48,6 @@
   </div>
   <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
     <%= render "users/table", users: @aspiranten %>
-
-    <% if current_user&.admin? %>
-      <%= link_to new_user_invitation_path, class: "inline-flex items-center px-3 py-2 mt-4 border border-gray-300 shadow-sm text-sm leading-4 font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" do %>
-        <%= heroicon('user-add', style: :outline, class_name: "h-4 w-4 mr-1") %> Aspirant uitnodigen
-      <% end %>
-    <% end %>
   </div>
   <div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
     <%= render "users/table", users: @oudelullen %>
