--- a/app/views/users/settings/_menu.html.erb
+++ b/app/views/users/settings/_menu.html.erb
@@ -12,13 +12,13 @@
   <div class="hidden md:block">
     <% items.each do |name, options| %>
       <% if current_page?(options[:path]) %>
-        <%= link_to options[:path], class: "border-hamers-red-400 text-hamers-red-400 bg-gray-50 hover:text-hamers-red-600 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
+        <%= link_to options[:path], class: "border-hamers-red-400 text-hamers-red-400 bg-gray-50 dark:bg-gray-800 hover:text-hamers-red-600 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
           <%= heroicon(options[:icon], style: :outline, class_name: "text-hamers-red-400 group-hover:text-hamers-red-600 flex-shrink-0 -ml-1 mr-3 h-6 w-6") %>
           <span class="truncate"><%= name %></span>
         <% end %>
       <% else %>
-        <%= link_to options[:path], class: "border-transparent text-gray-900 hover:bg-gray-50 hover:text-gray-900 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
-          <%= heroicon(options[:icon], style: :outline, class_name: "text-gray-400 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6") %>
+        <%= link_to options[:path], class: "border-transparent text-gray-900 dark:text-gray-200 hover:bg-gray-50 hover:text-gray-900 dark:hover:text-gray-200 dark:hover:bg-gray-800 hover:border-gray-200 dark:hover:border-gray-700 group border-l-4 px-3 py-2 flex items-center text-sm font-medium" do %>
+          <%= heroicon(options[:icon], style: :outline, class_name: "text-gray-400 dark:text-gray-200 group-hover:text-gray-500 flex-shrink-0 -ml-1 mr-3 h-6 w-6") %>
           <span class="truncate"><%= name %></span>
         <% end %>
       <% end %>
@@ -27,7 +27,7 @@
 
   <div class="md:hidden ml-6" data-controller="select-menu">
     <label for="selected-tab" class="sr-only">Select a tab</label>
-    <select data-action="change->select-menu#run" data-select-menu-target="select" id="selected-tab" class="mt-1 w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
+    <select data-action="change->select-menu#run" data-select-menu-target="select" id="selected-tab" class="mt-1 w-full pl-3 pr-10 py-2 text-base border-gray-300 dark:border-gray-700 dark:bg-gray-800 dark:text-gray-200 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
       <% items.each do |name, options| %>
         <option value="<%= options[:path] %>" <%= 'selected' if current_page?(options[:path]) %>>
           <%= name %>
