--- a/app/views/users/settings/_form_profile.html.erb
+++ b/app/views/users/settings/_form_profile.html.erb
@@ -33,7 +33,7 @@
       <%= f.check_box :anonymous, class: checkbox_classes %>
     </div>
     <div class="ml-3 text-sm">
-      <%= f.label :anonymous, "Anoniem op publieke pagina's", class: "font-medium text-gray-700" %>
+      <%= f.label :anonymous, "Anoniem op publieke pagina's", class: "font-medium text-gray-700 dark:text-gray-400" %>
       <span id="comments-description" class="text-gray-500"><span class="sr-only">Anoniem op publieke pagina's  </span>(je staat wel op de ledenpagina).</span>
     </div>
   </div>
@@ -42,7 +42,7 @@
       <%= f.check_box :new_event_mail, class: checkbox_classes %>
     </div>
     <div class="ml-3 text-sm">
-      <%= f.label :new_event_mail, "Ontvang een email wanneer een nieuwe activiteit wordt aangemaakt.", class: "font-medium text-gray-700" %>
+      <%= f.label :new_event_mail, "Ontvang een email wanneer een nieuwe activiteit wordt aangemaakt.", class: "font-medium text-gray-700 dark:text-gray-400" %>
       <span id="comments-description" class="text-gray-500"><span class="sr-only">Ontvang een email wanneer een nieuwe activiteit wordt aangemaakt. </span></span>
     </div>
   </div>
