--- a/app/views/users/settings/edit_two_factor.html.erb
+++ b/app/views/users/settings/edit_two_factor.html.erb
@@ -2,7 +2,7 @@
   Schakel 2FA in
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <aside class="-ml-6 my-6 md:col-span-3 md:pr-6">
     <%= render partial: 'users/settings/menu' %>
   </aside>
@@ -10,7 +10,6 @@
   <div class='md:col-span-9 md:pl-6'>
     <div class="flex justify-center mt-6">
       <%== @qrcode.as_svg(
-        color: "000",
         shape_rendering: "crispEdges",
         module_size: 4,
         standalone: true,
@@ -18,7 +17,7 @@
       ) %>
     </div>
 
-    <div class="flex justify-center my-4">
+    <div class="flex justify-center my-4 dark:text-gray-200">
       <p>Scan de QR code met je 2FA app of gebruik de secret: <%= @secret %> en klik op enable</p>
     </div>
 
