--- a/app/views/users/settings/two_already_enabled.html.erb
+++ b/app/views/users/settings/two_already_enabled.html.erb
@@ -2,18 +2,18 @@
   Schakel 2FA in
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <aside class="-ml-6 my-6 md:col-span-3 md:pr-6">
     <%= render partial: 'users/settings/menu' %>
   </aside>
 
   <div class='md:col-span-9 md:pl-6'>
-    <div class="flex justify-center mt-6">
+    <div class="flex justify-center mt-6 dark:text-gray-200">
       2FA staat aan 👍
     </div>
 
     <% if @codes %>
-      <div class="flex justify-center my-4">
+      <div class="flex justify-center my-4 dark:text-gray-400">
         <p class="m-4">Sla de volgende back up codes op om toch je account in te kunnen als je je 2FA device kwijtraakt:</p>
         <p class="m-4"><%= @codes.join(", ") %></p>
       </div>
