--- a/app/views/users/settings/api_keys.html.erb
+++ b/app/views/users/settings/api_keys.html.erb
@@ -2,7 +2,7 @@
   Wijzig je API-sleutels
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
   <aside class="-ml-6 my-6 lg:col-span-3 lg:pr-6">
     <%= render partial: 'users/settings/menu' %>
   </aside>
@@ -13,23 +13,23 @@
     <div class="my-6 flex flex-col">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-          <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-            <table class="min-w-full divide-y divide-gray-200">
-              <thead class="bg-gray-100">
+          <div class="shadow overflow-hidden border-b border-gray-200 dark:border-transparent sm:rounded-lg">
+            <table class="min-w-full divide-y divide-gray-200 dark:divide-black">
+              <thead class="bg-gray-100 dark:bg-black">
               <tr>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Naam</th>
-                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Sleutel</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Naam</th>
+                <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">Sleutel</th>
                 <th scope="col" class="relative px-6 py-3"><span class="sr-only">Verwijder</span></th>
               </tr>
               </thead>
 
-              <tbody class="divide-y divide-gray-200">
+              <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
               <% current_user.api_keys.each_with_index do |key, index| %>
-                <tr class="<%= index % 2 == 0 ? "bg-white" : "bg-gray-50" %>">
-                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                <tr class="dark:bg-gray-800">
+                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-gray-200">
                     <%= key.name %>
                   </td>
-                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                  <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 dark:text-gray-200">
                     <%= key.key %>
                   </td>
                   <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
