--- a/app/views/usergroups/index.html.erb
+++ b/app/views/usergroups/index.html.erb
@@ -8,40 +8,33 @@
   <% end %>
 <% end %>
 
-<div class="-m-5 sm:-m-6">
-  <div data-controller="tabs" data-tabs-active-tab="border-hamers-red-500 text-hamers-red-600 hover:border-hamers-red-600 hover:text-hamers-red-700">
-    <div>
-      <div class="sm:hidden m-4">
-        <label for="tabs" class="sr-only">Select a tab</label>
-        <select id="tabs" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
-          <option data-action="click->tabs#change" data-index="0">Huidig</option>
-          <option data-action="click->tabs#change" data-index="1">Gearchiveerd</option>
-        </select>
-      </div>
-
-      <div class="hidden sm:block -mt-4">
-        <div class="border-b border-gray-200">
-          <nav class="-mb-px mx-6 flex space-x-8">
-            <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
-              Huidig
-            </button>
-            <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
-              Gearchiveerd
-            </button>
-          </nav>
-        </div>
-      </div>
+<div data-controller="tabs select-tabs" data-tabs-active-tab="border-hamers-red-500 font-bold text-hamers-red-500 dark:text-hamers-red-500 hover:border-hamers-red-600 hover:text-hamers-red-600 dark:hover:border-hamers-red-600 dark:hover:text-hamers-red-600">
+  <div>
+    <div class="sm:hidden">
+      <label for="tabs" class="sr-only">Select a tab</label>
+      <select id="tabs" data-action="change->select-tabs#change" data-select-tabs-target="tab" name="tabs" class="block w-full pl-3 pr-10 py-2 text-base border-gray-300 dark:bg-gray-800 dark:text-gray-200 dark:border-gray-700 focus:outline-none focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm rounded-md">
+        <option value="0">Huidig</option>
+        <option value="1">Gearchiveerd</option>
+      </select>
     </div>
 
-    <div class="hidden" data-tabs-target="panel">
-      <ul role="list" class="divide-y divide-gray-200 rounded-xl">
-        <%= render @usergroups.not_archived %>
-      </ul>
-    </div>
-    <div class="hidden" data-tabs-target="panel">
-      <ul role="list" class="divide-y divide-gray-200 rounded-xl">
-        <%= render @usergroups.archived %>
-      </ul>
+    <div class="hidden sm:block -mt-4">
+    <div class="border-b border-gray-200 dark:border-gray-700">
+      <nav class="-mb-px flex space-x-8">
+        <button href="#" data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 hover:border-gray-300 dark:hover:border-gray-200 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+          Huidg
+        </button>
+        <button data-action="click->tabs#change" data-tabs-target="tab" class="border-transparent text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-200 hover:border-gray-300 dark:hover:border-gray-200 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+          Gearchiveerd
+        </button>
+      </nav>
     </div>
   </div>
+</div>
+
+<div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
+  <%= render @usergroups.not_archived %>
+</div>
+<div class="hidden" data-tabs-target="panel" data-select-tabs-target="panel">
+   <%= render @usergroups.archived %>
 </div>
