--- a/app/views/usergroups/_usergroup.html.erb
+++ b/app/views/usergroups/_usergroup.html.erb
@@ -1,5 +1,5 @@
 <li class="flex">
-  <%= link_to usergroup, class: "w-full px-4 py-4 flex items-center sm:px-6 block hover:bg-gray-50" do %>
+  <%= link_to usergroup, class: "w-full px-4 py-4 border-b border-gray-50 dark:border-gray-700 flex items-center sm:px-6 block hover:bg-gray-50 dark:hover:bg-gray-700" do %>
     <div class="min-w-0">
       <% if usergroup.logo.attached? %>
         <%= image_tag usergroup.logo.representation(resize_to_limit: [100, 100]), class: "h-12 w-12 mr-4 rounded-full" %>
@@ -9,10 +9,10 @@
     </div>
     <div class="min-w-0 flex-1 sm:flex sm:items-center sm:justify-between">
       <div class="truncate">
-        <p class="flex font-medium text-sm">
+        <p class="flex font-medium text-sm dark:text-gray-200">
           <%= usergroup.name %>
         </p>
-        <p class="flex text-sm text-gray-500">
+        <p class="flex text-sm text-gray-500 dark:text-gray-400">
           <%= usergroup.description %>
         </p>
       </div>
