--- a/app/views/usergroups/_member_list.html.erb
+++ b/app/views/usergroups/_member_list.html.erb
@@ -1,23 +1,23 @@
-<ul role="list" class="mt-5 border-t border-gray-200 divide-y divide-gray-200 sm:mt-0 sm:border-t-0">
+<ul role="list" class="mt-5 border-t border-gray-200 dark:border-gray-700 divide-y divide-gray-200 dark:divide-gray-700 sm:mt-0 sm:border-t-0">
   <% users.each do |user| %>
     <li>
       <%= link_to user do %>
-        <div class="flex items-center py-5 px-4 hover:bg-gray-50">
+        <div class="flex items-center py-5 px-4 hover:bg-gray-50 dark:hover:bg-gray-700">
           <div class="min-w-0 flex-1 flex items-center">
             <div class="flex-shrink-0">
               <%= gravatar_for user, class: "h-12 w-12 rounded-full group-hover:opacity-75", alt: user.name %>
             </div>
             <div class="min-w-0 flex-1 px-4 md:grid md:grid-cols-2 md:gap-4">
               <div>
-                <p class="text-sm font-medium text-gray-900 truncate"><%= user.name %></p>
-                <p class="mt-2 flex items-center text-sm text-gray-500">
+                <p class="text-sm font-medium text-gray-900 dark:text-gray-200 truncate"><%= user.name %></p>
+                <p class="mt-2 flex items-center text-sm text-gray-500 dark:text-gray-400">
                   <%= heroicon('mail', style: :solid, class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
                   <span class="truncate"><%= user.email %></span>
                 </p>
               </div>
               <div class="hidden md:block">
                 <div>
-                  <p class="text-sm text-gray-900 mt-4">
+                  <p class="text-sm text-gray-900 dark:text-gray-200 mt-4">
                     <% group = Group.with_deleted.where(user_id: user.id, group_id: @usergroup.id).first %>
                     Lid sinds <%= group.created_at.strftime('%d-%m-%Y') %>
                     <%= "tot #{group.deleted_at.strftime('%d-%m-%Y')}" if group.deleted_at %>
