--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -15,7 +15,7 @@
     <div class="space-y-4">
       <%= f.text_field :name, class: input_classes, required: true, minlength: 2, placeholder: "Naam" %>
       <%= f.text_field :beer, class: input_classes, required: true, minlength: 2, placeholder: "Soort" %>
-      <%= f.rich_text_area :description, class: 'form-control', placeholder: "blablabla" %>
+      <%= f.rich_text_area :description, class: 'form-control dark:text-gray-200', placeholder: "blablabla" %>
     </div>
 
     <div class="flex justify-center mt-5">
