Edited brews colours for dark mode

--- a/app/views/brews/edit.html.erb
+++ b/app/views/brews/edit.html.erb
@@ -2,8 +2,8 @@
   Uitvoering van <%= @recipe.name %> aanpassen
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
-  <aside class="ml-6 py-6 md:col-span-4 md:pr-6">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+  <aside class="ml-6 py-6 md:col-span-4 md:pr-6 dark:text-gray-200">
     <%= @recipe.description %>
   </aside>
 
