--- a/app/views/brews/new.html.erb
+++ b/app/views/brews/new.html.erb
@@ -2,7 +2,7 @@
   Nieuwe uitvoering van <%= @recipe.name %>
 <% end %>
 
-<div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
+<div class="divide-y divide-gray-200 dark:divide-gray-700 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
   <aside class="ml-6 py-6 md:col-span-4 md:pr-6">
     <%= @recipe.description %>
   </aside>
