--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -8,14 +8,14 @@
 
 <div class="flex flex-col -m-6">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8 shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-      <table class="min-w-full divide-y divide-gray-200">
-        <thead class="bg-gray-100">
+    <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8 shadow overflow-hidden border-b border-gray-200 dark:border-gray-700 sm:rounded-lg">
+      <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+        <thead class="bg-gray-100 dark:bg-black">
         <tr>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
             Naam
           </th>
-          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+          <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-200 uppercase tracking-wider">
             Openbaar
           </th>
           <th scope="col" class="relative px-6 py-3">
@@ -23,13 +23,13 @@
           </th>
         </tr>
         </thead>
-        <tbody class="bg-white divide-y divide-gray-200">
+        <tbody class="divide-y divide-gray-200 dark:divide-gray-700">
         <% @public_pages.each do |page| %>
-          <tr onclick='Turbo.visit("<%= public_page_path(page) %>")' class="hover:bg-gray-50 cursor-pointer">
-            <td class="px-6 py-4 whitespace-nowrap">
+          <tr onclick='Turbo.visit("<%= public_page_path(page) %>")' class="hover:bg-gray-50 dark:hover:bg-gray-800 cursor-pointer">
+            <td class="px-6 py-4 whitespace-nowrap dark:text-gray-200">
               <%= page.title %>
             </td>
-            <td class="px-6 py-4 whitespace-normal text-sm text-gray-500">
+            <td class="px-6 py-4 whitespace-normal text-sm text-gray-500 dark:text-gray-400">
               <%= page.public %>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
